# zns-tools

./: .gitignore  AE.md  CITATION.cff  CMakeLists.txt  LICENSE  Makefile  Makefile.am  README.md  configure  configure.ac  filemap.c  filemap.h  plot.py
.github/workflows/: build.yaml  cMake.yaml  clang-format.yaml
evaluation/timeline-data/: nvme_reset_print.bt  preprocess_data.ipynb  report_rocksdb_status.sh  rocksdb.ccaa3225b.patch
evaluation/timeline-gen/: data.json  file_list
evaluation/zns-tools-bench/: README.md  bench-zns-tools  job.fio  nullblk_create  nullblk_delete  plot.py  plot_withstdev.py
evaluation/zns-tools-bench/data/: time-100K_files.dat.  time-100K_files.dat.1  time-100K_files.dat.10  time-100K_files.dat.11  time-100K_files.dat.2  time-100K_files.dat.3  time-100K_files.dat.4  time-100K_files.dat.5  time-100K_files.dat.6  time-100K_files.dat.7  time-100K_files.dat.8  time-100K_files.dat.9  time-100K_files.datA  time-100K_files.datB  time-100_files.dat.1  time-100_files.dat.10  time-100_files.dat.2  time-100_files.dat.3  time-100_files.dat.4  time-100_files.dat.5  time-100_files.dat.6  time-100_files.dat.7  time-100_files.dat.8  time-100_files.dat.9  time-10K_files.dat.1  time-10K_files.dat.10  time-10K_files.dat.2  time-10K_files.dat.3  time-10K_files.dat.4  time-10K_files.dat.5  time-10K_files.dat.6  time-10K_files.dat.7  time-10K_files.dat.8  time-10K_files.dat.9  time-1K_files.dat.1  time-1K_files.dat.10  time-1K_files.dat.2  time-1K_files.dat.3  time-1K_files.dat.4  time-1K_files.dat.5  (+24 more)
examples/: zns.fibmap.md  zns.fiemap.md  zns.fpbench.md  zns.fsinfo.md  zns.segmap.md  zns_fibmap.md
fpbench/: Makefile.am  fpbench.c  fpbench.h  zns.fpbench
fpbench/.deps/: fpbench.Po
fpbench/.libs/: zns.fpbench
include/: f2fs.h  f2fs_fs.h  json.h  zmap.h  zns-tools.h
lib/: Makefile.am  libf2fs.c  libjson.c  libzmap.c  libzmap.la  libzmap_la-libzmap.lo  libzns-tools.c
lib/.deps/: libzmap_la-libzmap.Plo
lib/.libs/: libzmap.la  libzmap.lai
man/: Makefile.am  filemap.8  zns.fibmap.8  zns.fiemap.8  zns.fpbench.8  zns.fsinfo.8  zns.segmap.8
src/: Makefile.am  control.c  control.h  fibmap.c  fibmap.h  fiemap.c  fiemap.h  filemap.c  filemap.h  fpbench.c  fpbench.h  fs_info.c  fs_info.h  imap.c  inode.c  inode.h  main.c  segmap.c  segmap.h  zns.inode  zonemap  zonemap.c  zonemap.h
src/.libs/: zonemap
timeline-data/: timeline_data_rocksdb_gen.sh  zns-tools.673f665.patch
timeline-gen/: data.json  plot.ipynb  summary
workloads/: README.md  setup_f2fs
workloads/ZNS-baseline/: bench  plot.py  zns_zone_bench
workloads/ZNS-baseline/zns_single_zone_iodepth/: zns_single_zone_iodepth-1.json
workloads/ZNS-baseline/zns_three_zone_iodepth/: zns_two_zone_iodepth-1.json  zns_two_zone_iodepth-1028.json  zns_two_zone_iodepth-16.json  zns_two_zone_iodepth-256.json  zns_two_zone_iodepth-4.json  zns_two_zone_iodepth-8.json
workloads/ZNS-baseline/zns_two_zone_iodepth/: zns_two_zone_iodepth-1028.json  zns_two_zone_iodepth-16.json  zns_two_zone_iodepth-2.json  zns_two_zone_iodepth-256.json  zns_two_zone_iodepth-4.json  zns_two_zone_iodepth-64.json
workloads/f2fs-baseline/: bench  f2fs_single_stream_concur_bench  f2fs_single_stream_iodepth_bench  plot.py  zns_zone_bench
workloads/f2fs-baseline/f2fs_single_stream_iodepth/: f2fs_iodepth-1.json  f2fs_iodepth-4.json
workloads/f2fs-baseline/zns_single_zone_iodepth/: zns_single_zone_iodepth-2.json  zns_single_zone_iodepth-256.json  zns_single_zone_iodepth-32.json  zns_single_zone_iodepth-4.json
workloads/f2fs-baseline/zns_three_zone_iodepth/: zns_two_zone_iodepth-2.json
workloads/f2fs-baseline/zns_two_zone_iodepth/: zns_two_zone_iodepth-1.json  zns_two_zone_iodepth-32.json  zns_two_zone_iodepth-512.json
workloads/f2fs-single_stream/: bench  f2fs_single_stream_concur_bench  f2fs_single_stream_iodepth_bench  plot.py
workloads/f2fs-single_stream/f2fs_single_stream_concur/: f2fs_concur-1.json  f2fs_concur-2.json  f2fs_concur-3.json  f2fs_concur-4.json  f2fs_concur-5.json  f2fs_concur-6.json  f2fs_concur-7.json  f2fs_concur-8.json
workloads/f2fs-single_stream/f2fs_single_stream_iodepth/: f2fs_iodepth-1.json  f2fs_iodepth-2.json  f2fs_iodepth-3.json  f2fs_iodepth-4.json  f2fs_iodepth-5.json  f2fs_iodepth-6.json  (+3 more)
workloads/f2fs-write_single_stream/: f2fs_single_stream_concur_bench  f2fs_single_stream_iodepth_bench  f2fs_single_strem_concur_bench  plot.py  zns_single_zone_iodepth_bench
zns-tools.app/: README.md  f2fs-probes.bt  zns-tools.app
zns-tools.app/data-db_bench/: inodes.json  mm_data.json  rocksdb.json  vfs_data.json
zns-tools.app/util/: timeline.py
zns-tools.fs/: Makefile.am
zns-tools.fs/examples/: zns.fpbench.md
zns-tools.fs/include/: zns-tools.h
zns-tools.fs/lib/: libf2fs.c  libjson.c  libzns-tools.c
zns-tools.fs/man/: Makefile.am  zns.fiemap.8  zns.fpbench.8  zns.imap.8  zns.segmap.8
zns-tools.fs/src/: fiemap.c  imap.c  imap.h  segmap.c  segmap.h
zns-tools.nvme/: README.md  example-YCSB-heatmaps.md  example-YSCB.md  plot.py
zns.apptrace/: README.md  inode-probes.bt  zns.apptrace
zns.apptrace/util/: event.py  helpers.py
zns.trace/: README.md  app-tracegen.py  example-YSCB.md  f2fs-probes.bt  mm-probes.bt  nvme-probes.bt  plot.py  requirements.txt  rocksdb-probes.bt  trace.bt  tracegen.py  vfs-probes.bt  zns-bio-probes.bt  zns-probes.bt  zns.apptrace  zns.trace
zns.trace/util/: event.py  helpers.py  timeline.py  timestamp.py
(+57 files in other folders)
