## Makefile.am

lib_LTLIBRARIES = libzns-tools.la libf2fs.la libjson.la

libzns_tools_la_SOURCES = libzns-tools.c
libzns_tools_la_CFLAGS = -Wall
libzns_tools_la_CPPFLAGS = -I$(top_srcdir)/include

libf2fs_la_SOURCES = libf2fs.c
libf2fs_la_CFLAGS = -Wall
libf2fs_la_CPPFLAGS = -I$(top_srcdir)/include

libjson_la_SOURCES = libjson.c
libjson_la_CFLAGS = -Wall
libjson_la_CPPFLAGS = -I$(top_srcdir)/include
